clean up params and example config

--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -74,12 +74,12 @@ example_csv:
     name: "example_csv"
     update_every: 2
     chart_configs:
-      - chart_name: "london_system_cpu"
-        chart_title: "london_system_cpu"
-        chart_family: "london_system_cpu"
-        chart_context: "london_system_cpu"
-        chart_type: "line"
-        chart_units: "n"
+      - name: "london_system_cpu"
+        title: "London System CPU - Ratios"
+        family: "london_system_cpu"
+        context: "pandas"
+        type: "line"
+        units: "n"
         df_steps: >
           pd.read_csv('https://london.my-netdata.io/api/v1/data?chart=system.cpu&format=csv&after=-60', storage_options={'User-Agent': 'netdata'});
           df.drop('time', axis=1);
@@ -94,12 +94,12 @@ example_json:
     name: "example_json"
     update_every: 2
     chart_configs:
-      - chart_name: "london_system_net"
-        chart_title: "london_system_net"
-        chart_family: "london_system_net"
-        chart_context: "london_system_net"
-        chart_type: "area"
-        chart_units: "kilobits/s"
+      - name: "london_system_net"
+        title: "London System Net - Total Bandwidth"
+        family: "london_system_net"
+        context: "pandas"
+        type: "area"
+        units: "kilobits/s"
         df_steps: >
           pd.DataFrame(requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['data'], columns=requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['labels']);
           df.drop('time', axis=1);
