add xml example

--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -106,3 +106,21 @@ example_json:
           abs(df);
           df.sum(axis=1).to_frame();
           df.rename(columns={0:'total_bandwidth'});
+
+# example showing a read_xml from a url and some light pandas data wrangling.
+# pull weather forecast data in xml format, use xpath to pull out temperature forecast.
+example_xml:
+    name: "example_xml"
+    update_every: 2
+    sep: "|"
+    chart_configs:
+      - name: "temperature_forcast"
+        title: "Temperature Forecast"
+        family: "temp"
+        context: "temp"
+        type: "line"
+        units: "celsius"
+        df_steps: >
+          pd.read_xml('http://metwdb-openaccess.ichec.ie/metno-wdb2ts/locationforecast?lat=54.7210798611;long=-8.7237392806', xpath='./product/time[1]/location/temperature')|
+          df.rename(columns={'value': 'dublin'})|
+          df[['dublin']]|
