add xml example

--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -112,7 +112,7 @@ example_json:
 example_xml:
     name: "example_xml"
     update_every: 2
-    sep: "|"
+    line_sep: "|"
     chart_configs:
       - name: "temperature_forcast"
         title: "Temperature Forecast"
