comment out examples in pandas.conf

--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -68,59 +68,61 @@ update_every: 5
 # ----------------------------------------------------------------------
 # AUTO-DETECTION JOBS
 
+# Some example configurations, enable this collector, uncomment and example below and restart netdata to enable.
+
 # example showing a read_csv from a url and some light pandas data wrangling.
 # pull data in csv format from london demo server and then ratio of user cpus over system cpu averaged over last 60 seconds.
-example_csv:
-    name: "example_csv"
-    update_every: 2
-    chart_configs:
-      - name: "london_system_cpu"
-        title: "London System CPU - Ratios"
-        family: "london_system_cpu"
-        context: "pandas"
-        type: "line"
-        units: "n"
-        df_steps: >
-          pd.read_csv('https://london.my-netdata.io/api/v1/data?chart=system.cpu&format=csv&after=-60', storage_options={'User-Agent': 'netdata'});
-          df.drop('time', axis=1);
-          df.mean().to_frame().transpose();
-          df.apply(lambda row: (row.user / row.system), axis = 1).to_frame();
-          df.rename(columns={0:'average_user_system_ratio'});
-          df*100;
+# example_csv:
+#     name: "example_csv"
+#     update_every: 2
+#     chart_configs:
+#       - name: "london_system_cpu"
+#         title: "London System CPU - Ratios"
+#         family: "london_system_cpu"
+#         context: "pandas"
+#         type: "line"
+#         units: "n"
+#         df_steps: >
+#           pd.read_csv('https://london.my-netdata.io/api/v1/data?chart=system.cpu&format=csv&after=-60', storage_options={'User-Agent': 'netdata'});
+#           df.drop('time', axis=1);
+#           df.mean().to_frame().transpose();
+#           df.apply(lambda row: (row.user / row.system), axis = 1).to_frame();
+#           df.rename(columns={0:'average_user_system_ratio'});
+#           df*100;
 
 # example showing a read_json from a url and some light pandas data wrangling.
 # pull data in json format (using requests.get() if json data is too complex for pd.read_json() ) from london demo server and work out 'total_bandwidth'.
-example_json:
-    name: "example_json"
-    update_every: 2
-    chart_configs:
-      - name: "london_system_net"
-        title: "London System Net - Total Bandwidth"
-        family: "london_system_net"
-        context: "pandas"
-        type: "area"
-        units: "kilobits/s"
-        df_steps: >
-          pd.DataFrame(requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['data'], columns=requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['labels']);
-          df.drop('time', axis=1);
-          abs(df);
-          df.sum(axis=1).to_frame();
-          df.rename(columns={0:'total_bandwidth'});
+# example_json:
+#     name: "example_json"
+#     update_every: 2
+#     chart_configs:
+#       - name: "london_system_net"
+#         title: "London System Net - Total Bandwidth"
+#         family: "london_system_net"
+#         context: "pandas"
+#         type: "area"
+#         units: "kilobits/s"
+#         df_steps: >
+#           pd.DataFrame(requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['data'], columns=requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['labels']);
+#           df.drop('time', axis=1);
+#           abs(df);
+#           df.sum(axis=1).to_frame();
+#           df.rename(columns={0:'total_bandwidth'});
 
 # example showing a read_xml from a url and some light pandas data wrangling.
 # pull weather forecast data in xml format, use xpath to pull out temperature forecast.
-example_xml:
-    name: "example_xml"
-    update_every: 2
-    line_sep: "|"
-    chart_configs:
-      - name: "temperature_forcast"
-        title: "Temperature Forecast"
-        family: "temp"
-        context: "temp"
-        type: "line"
-        units: "celsius"
-        df_steps: >
-          pd.read_xml('http://metwdb-openaccess.ichec.ie/metno-wdb2ts/locationforecast?lat=54.7210798611;long=-8.7237392806', xpath='./product/time[1]/location/temperature', parser='etree')|
-          df.rename(columns={'value': 'dublin'})|
-          df[['dublin']]|
+# example_xml:
+#     name: "example_xml"
+#     update_every: 2
+#     line_sep: "|"
+#     chart_configs:
+#       - name: "temperature_forcast"
+#         title: "Temperature Forecast"
+#         family: "temp"
+#         context: "temp"
+#         type: "line"
+#         units: "celsius"
+#         df_steps: >
+#           pd.read_xml('http://metwdb-openaccess.ichec.ie/metno-wdb2ts/locationforecast?lat=54.7210798611;long=-8.7237392806', xpath='./product/time[1]/location/temperature', parser='etree')|
+#           df.rename(columns={'value': 'dublin'})|
+#           df[['dublin']]|
