add weather example

--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -70,6 +70,41 @@ update_every: 5
 
 # Some example configurations, enable this collector, uncomment and example below and restart netdata to enable.
 
+# example pulling some hourly temperature data
+# temperature:
+#     name: "temperature"
+#     update_every: 3
+#     chart_configs:
+#       - name: "temperature_by_city"
+#         title: "Temperature By City"
+#         family: "temperature.today"
+#         context: "temperature"
+#         type: "line"
+#         units: "Celsius"
+#         df_steps: >
+#           pd.DataFrame.from_dict(
+#             {city: requests.get(f'https://api.open-meteo.com/v1/forecast?latitude={lat}&longitude={lng}&hourly=temperature_2m').json()['hourly']['temperature_2m'] 
+#             for (city,lat,lng) 
+#             in [
+#                 ('dublin', 53.3441, -6.2675),
+#                 ('athens', 37.9792, 23.7166),
+#                 ('london', 51.5002, -0.1262),
+#                 ('berlin', 52.5235, 13.4115),
+#                 ('paris', 48.8567, 2.3510),
+#                 ]
+#             }
+#             );
+#           df.describe();                                               # get aggregate stats for each city;
+#           df.transpose()[['mean', 'max', 'min']].reset_index();        # just take mean, min, max;
+#           df.rename(columns={'index':'city'});                         # some column renaming;
+#           df.pivot(columns='city').mean().to_frame().reset_index();    # force to be one row per city;
+#           df.rename(columns={0:'degrees'});                            # some column renaming;
+#           pd.concat([df, df['city']+'_'+df['level_0']], axis=1);       # add new column combining city and summary measuement label;
+#           df.rename(columns={0:'measurement'});                        # some column renaming;
+#           df[['measurement', 'degrees']].set_index('measurement');     # just take two columns we want;
+#           df.sort_index();                                             # sort by city name;
+#           df.transpose();                                              # transpose so its just one wide row;
+
 # example showing a read_csv from a url and some light pandas data wrangling.
 # pull data in csv format from london demo server and then ratio of user cpus over system cpu averaged over last 60 seconds.
 # example_csv:
