finalize weather example

--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -70,27 +70,30 @@ update_every: 5
 
 # Some example configurations, enable this collector, uncomment and example below and restart netdata to enable.
 
-# example pulling some hourly temperature data
+# example pulling some hourly temperature data, a chart for today forecast (mean,min,max) and another chart for current.
 # temperature:
 #     name: "temperature"
-#     update_every: 3
+#     update_every: 5
 #     chart_configs:
-#       - name: "temperature_by_city"
-#         title: "Temperature By City"
+#       - name: "temperature_forecast_by_city"
+#         title: "Temperature By City - Today Forecast"
 #         family: "temperature.today"
 #         context: "temperature"
 #         type: "line"
 #         units: "Celsius"
 #         df_steps: >
 #           pd.DataFrame.from_dict(
-#             {city: requests.get(f'https://api.open-meteo.com/v1/forecast?latitude={lat}&longitude={lng}&hourly=temperature_2m').json()['hourly']['temperature_2m'] 
-#             for (city,lat,lng) 
+#             {city: requests.get(f'https://api.open-meteo.com/v1/forecast?latitude={lat}&longitude={lng}&hourly=temperature_2m').json()['hourly']['temperature_2m']
+#             for (city,lat,lng)
 #             in [
 #                 ('dublin', 53.3441, -6.2675),
 #                 ('athens', 37.9792, 23.7166),
 #                 ('london', 51.5002, -0.1262),
 #                 ('berlin', 52.5235, 13.4115),
 #                 ('paris', 48.8567, 2.3510),
+#                 ('madrid', 40.4167, -3.7033),
+#                 ('new_york', 40.71, -74.01),
+#                 ('los_angeles', 34.05, -118.24),
 #                 ]
 #             }
 #             );
@@ -104,6 +107,31 @@ update_every: 5
 #           df[['measurement', 'degrees']].set_index('measurement');     # just take two columns we want;
 #           df.sort_index();                                             # sort by city name;
 #           df.transpose();                                              # transpose so its just one wide row;
+#       - name: "temperature_current_by_city"
+#         title: "Temperature By City - Current"
+#         family: "temperature.current"
+#         context: "temperature"
+#         type: "line"
+#         units: "Celsius"
+#         df_steps: >
+#           pd.DataFrame.from_dict(
+#               {city: requests.get(f'https://api.open-meteo.com/v1/forecast?latitude={lat}&longitude={lng}&current_weather=true').json()['current_weather']
+#               for (city,lat,lng)
+#               in [
+#                   ('dublin', 53.3441, -6.2675),
+#                   ('athens', 37.9792, 23.7166),
+#                   ('london', 51.5002, -0.1262),
+#                   ('berlin', 52.5235, 13.4115),
+#                   ('paris', 48.8567, 2.3510),
+#                   ('madrid', 40.4167, -3.7033),
+#                   ('new_york', 40.71, -74.01),
+#                   ('los_angeles', 34.05, -118.24),
+#                   ]
+#               }
+#               );
+#           df.transpose();
+#           df[['temperature']];
+#           df.transpose();
 
 # example showing a read_csv from a url and some light pandas data wrangling.
 # pull data in csv format from london demo server and then ratio of user cpus over system cpu averaged over last 60 seconds.
