--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -102,7 +102,7 @@ update_every: 5
 #           df.rename(columns={'index':'city'});                         # some column renaming;
 #           df.pivot(columns='city').mean().to_frame().reset_index();    # force to be one row per city;
 #           df.rename(columns={0:'degrees'});                            # some column renaming;
-#           pd.concat([df, df['city']+'_'+df['level_0']], axis=1);       # add new column combining city and summary measuement label;
+#           pd.concat([df, df['city']+'_'+df['level_0']], axis=1);       # add new column combining city and summary measurement label;
 #           df.rename(columns={0:'measurement'});                        # some column renaming;
 #           df[['measurement', 'degrees']].set_index('measurement');     # just take two columns we want;
 #           df.sort_index();                                             # sort by city name;
