--- a/Makefile.am
+++ b/Makefile.am
@@ -203,6 +203,11 @@ APPS_PLUGIN_FILES = \
     $(LIBNETDATA_FILES) \
     $(NULL)
 
+PROFILE_PLUGIN_FILES = \
+    collectors/profile.plugin/plugin_profile.cc \
+    collectors/profile.plugin/plugin_profile.h \
+    $(NULL)
+
 CHECKS_PLUGIN_FILES = \
     collectors/checks.plugin/plugin_checks.c \
     $(NULL)
@@ -915,6 +920,7 @@ NETDATA_FILES = \
     $(API_PLUGIN_FILES) \
     $(EXPORTING_ENGINE_FILES) \
     $(CHECKS_PLUGIN_FILES) \
+    $(PROFILE_PLUGIN_FILES) \
     $(HEALTH_PLUGIN_FILES) \
     $(ML_FILES) \
     $(ML_TESTS_FILES) \
