Port the majority of existing unit tests to Google test framework.

--- a/Makefile.am
+++ b/Makefile.am
@@ -136,6 +136,8 @@ LIBNETDATA_FILES = \
     libnetdata/arrayalloc/arrayalloc.h \
     libnetdata/avl/avl.c \
     libnetdata/avl/avl.h \
+    libnetdata/bitmap/bitmap.cc \
+    libnetdata/bitmap/bitmap.h \
     libnetdata/buffer/buffer.c \
     libnetdata/buffer/buffer.h \
     libnetdata/circular_buffer/circular_buffer.c \
@@ -918,7 +920,18 @@ TESTS_FILES = \
 if ENABLE_TESTS
 
 TESTS_FILES += \
+    tests/netdata/libnetdata/tests.cc \
+    tests/netdata/libnetdata/arrayalloc/tests.cc \
+    tests/netdata/libnetdata/bitmap/tests.cc \
+    tests/netdata/libnetdata/buffer/tests.cc \
+    tests/netdata/libnetdata/eval/tests.cc \
+    tests/netdata/libnetdata/storage_number/tests.cc \
+    tests/netdata/libnetdata/string/string.cc \
+    tests/netdata/daemon/tests.cc \
     tests/netdata/database/tests.cc \
+    tests/netdata/database/sqlite/tests.cc \
+    tests/netdata/database/rrdlabels.cc \
+    tests/netdata/web/api/queries/weights.cc \
     $(NULL)
 
 endif
@@ -1153,8 +1166,6 @@ endif
 
 if ENABLE_UNITTESTS
     check_PROGRAMS = \
-        libnetdata/tests/str2ld_testdriver \
-        libnetdata/storage_number/tests/storage_number_testdriver \
         exporting/tests/exporting_engine_testdriver \
         web/api/tests/web_api_testdriver \
         web/api/tests/valid_urls_testdriver \
@@ -1213,18 +1224,6 @@ if ENABLE_UNITTESTS
         $(LIBNETDATA_FILES) \
         $(NULL)
     web_api_tests_web_api_testdriver_LDADD = $(NETDATA_COMMON_LIBS) $(TEST_LIBS)
-
-    libnetdata_tests_str2ld_testdriver_SOURCES = \
-        libnetdata/tests/test_str2ld.c \
-        $(LIBNETDATA_FILES) \
-        $(NULL)
-    libnetdata_tests_str2ld_testdriver_LDADD = $(NETDATA_COMMON_LIBS) $(TEST_LIBS)
-
-    libnetdata_storage_number_tests_storage_number_testdriver_SOURCES = \
-        libnetdata/storage_number/tests/test_storage_number.c \
-        $(LIBNETDATA_FILES) \
-        $(NULL)
-    libnetdata_storage_number_tests_storage_number_testdriver_LDADD = $(NETDATA_COMMON_LIBS) $(TEST_LIBS)
 
     EXPORTING_ENGINE_TEST_FILES = \
         exporting/tests/test_exporting_engine.c \
