bluetooth: Initial commit

--- a/collectors/python.d.plugin/python.d.conf
+++ b/collectors/python.d.plugin/python.d.conf
@@ -31,6 +31,7 @@ gc_interval: 300
 # anomalies: no
 # beanstalk: yes
 # bind_rndc: yes
+# bluetooth: yes
 # boinc: yes
 # ceph: yes
 # changefinder: no
