Fall back to init.d in WSL in some cases.
If there is no _usable_ systemd, and the service manager otherwise looks
like an init.d setup, fall back to an init.d setup.

--- a/system/install-service.sh.in
+++ b/system/install-service.sh.in
@@ -409,21 +409,25 @@ lsb_cmds() {
 # =====================================================================
 # init.d init script support functions
 
-isinitd() {
+isinitd_ignore_systemd() {
   # if there is no /etc/init.d directory, it’s not an init.d system
   [ ! -d /etc/init.d ] && return 1
 
   # if there is no chkconfig command, it's not a (usable) init.d system
   command -v chkconfig >/dev/null 2>&1 || return 1
 
-  # if there is _any_ systemd, it’s not init.d
-  check_systemd ; [ $? = 1 ] || return 1
-
   # if there is _any_ openrc, it’s not init.d
   check_openrc ; [ $? = 1 ] || return 1
 
   # if it's not an LSB setup, it’s init.d
   check_lsb || return 0
+}
+
+isinitd() {
+  # if there is _any_ systemd, it’s not init.d
+  check_systemd ; [ $? = 1 ] || return 1
+
+  isinitd_ignore_systemd && return 0
 
   return 1
 }
@@ -617,9 +621,14 @@ detect_linux_svc_type() {
         SVC_TYPE="$(echo "${found_types}" | cut -f 1 -d ' ')"
         warning "Failed to detect a running service manager, using detected (but not running) ${SVC_TYPE}."
       fi
-    elif [ "${SVC_TYPE}" = "wsl" ] && check_systemd; then
-      # Support for systemd in WSL.
-      SVC_TYPE="systemd"
+    elif [ "${SVC_TYPE}" = "wsl" ]; then
+      if check_systemd; then
+        # Support for systemd in WSL.
+        SVC_TYPE="systemd"
+      elif isinitd_ignore_systemd; then
+        # Support for ‘generic’ init.d in WSL.
+        SVC_TYPE="initd"
+      fi
     fi
   fi
 
