--- a/Makefile.am
+++ b/Makefile.am
@@ -966,6 +966,7 @@ NETDATA_COMMON_LIBS = \
     $(OPTIONAL_SSL_LIBS) \
     $(OPTIONAL_JSONC_LIBS) \
     $(OPTIONAL_ATOMIC_LIBS) \
+    $(OPTIONAL_DL_LIBS) \
     $(NULL)
 
 if LINK_STATIC_JSONC
