--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -32,6 +32,7 @@ jobs:
           if [ "${{ github.event_name }}" = "pull_request" ]; then
             if [ "${{ contains(github.event.pull_request.labels.*.name, 'ci/codeql') }}" = "true" ]; then
               echo '::set-output name=run::true'
+              echo '::notice::Found ci/codeql label, unconditionally running all CodeQL checks.'
             else
               echo '::set-output name=run::false'
             fi
