--- a/.github/codeql/python-config.yml
+++ b/.github/codeql/python-config.yml
@@ -5,3 +5,6 @@ paths-ignore:
   - ml/json
   - tests/api
   - web/gui
+  - collectors/python.d.plugin/python_modules/pyyaml*
+  - collectors/python.d.plugin/python_modules/third_party
+  - collectors/python.d.plugin/python_modules/urllib3
