disable by default

--- a/collectors/python.d.plugin/python.d.conf
+++ b/collectors/python.d.plugin/python.d.conf
@@ -62,7 +62,7 @@ logind: no
 # ntpd: yes
 # openldap: yes
 # oracledb: yes
-# pandas: no
+# pandas: yes
 # postfix: yes
 # proxysql: yes
 # puppet: yes
