make context clearer in conf examples

--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -78,7 +78,7 @@ update_every: 5
 #       - name: "temperature_forecast_by_city"
 #         title: "Temperature By City - Today Forecast"
 #         family: "temperature.today"
-#         context: "temperature"
+#         context: "pandas.temperature"
 #         type: "line"
 #         units: "Celsius"
 #         df_steps: >
@@ -110,7 +110,7 @@ update_every: 5
 #       - name: "temperature_current_by_city"
 #         title: "Temperature By City - Current"
 #         family: "temperature.current"
-#         context: "temperature"
+#         context: "pandas.temperature"
 #         type: "line"
 #         units: "Celsius"
 #         df_steps: >
@@ -182,7 +182,7 @@ update_every: 5
 #       - name: "temperature_forcast"
 #         title: "Temperature Forecast"
 #         family: "temp"
-#         context: "temp"
+#         context: "pandas.temp"
 #         type: "line"
 #         units: "celsius"
 #         df_steps: >
