Add support for replication
- Add a new capability for replication, when not supported the agent
should behave as previously.
- When replication is supported, the text protocol supports the
following new commands:
    - CHART_DEFINITION_END: send the first/last entry of the child
    - REPLAY_RRDSET_BEGIN: sends the name of the chart we are
      replicating
    - REPLAY_RRDSET_HEADER: sends a line describing the columns of the
      following command (ie. start-time, end-time, dim1-name, ...)
    - REPLAY_RRDSET_DONE: sends values to push for a specific start/end
      time
    - REPLAY_RRDSET_END: send the (a) update every of the chart, (b)
      first/last entries in DB, (c) whether the child's been told to
      start streaming, (d) original after/before period to replicate.
    - REPLAY_CHART: Sent from a parent to a child, specifying (a)
      the chart name we want data for, (b) whether the child should
      start streaming once it has fullfilled the request with the
      aforementioned commands, (c) after/before of the data the parent
      wants
- As a consequence of the new protocol, streaming is disabled for all
  charts on a new connection. It's enabled once replication is finished.
- The configuration parameters are specified from within stream.conf:
        - "enable replication = yes|no"
        - "seconds to replicate = 3600"
        - "replication step = 600" (ie. how many seconds to fill per
          roundtrip request.

--- a/streaming/stream.conf
+++ b/streaming/stream.conf
@@ -168,6 +168,18 @@
     # You can control stream compression in this parent agent stream with options: yes | no
     #enable compression = yes
 
+    #
+    # Replication
+    #
+
+    # Enable replication for all hosts using this api key
+    #enable replication = yes
+
+    # How many seconds to replicate from each child
+    #seconds to replicate = 3600
+
+    # The duration we want to replicate per each step
+    #replication_step = 600
 
 # -----------------------------------------------------------------------------
 # 3. PER SENDING HOST SETTINGS, ON PARENT NETDATA
@@ -221,4 +233,16 @@
     # The stream with the child can be configurated to enable stream compression. 
     # You can control stream compression in this parent agent stream with options: yes | no
     #enable compression = yes
-  
+
+    #
+    # Replication
+    #
+
+    # Enable replication for all hosts using this api key
+    #enable replication = yes
+
+    # How many seconds to replicate from each child
+    #seconds to replicate = 3600
+
+    # The duration we want to replicate per each step
+    #replication_step = 600
