Suppress dlib ABI GCC warnings

--- a/Makefile.am
+++ b/Makefile.am
@@ -256,7 +256,7 @@ ML_FILES += \
     $(NULL)
 
 # Disable warnings from dlib library
-ml/dlib/dlib/all/source.$(OBJEXT) : CXXFLAGS += -Wno-sign-compare -Wno-type-limits -Wno-aggressive-loop-optimizations -Wno-stringop-overflow
+ml/dlib/dlib/all/source.$(OBJEXT) : CXXFLAGS += -Wno-sign-compare -Wno-type-limits -Wno-aggressive-loop-optimizations -Wno-stringop-overflow -Wno-psabi
 
 endif
 
