Squash all previous logs management commits to one

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,7 @@
 	path = ml/json
 	url = https://github.com/nlohmann/json.git
 	shallow = true
+[submodule "fluent-bit"]
+	path = fluent-bit
+	url = https://github.com/fluent/fluent-bit.git
+	shallow = true
