--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1061,6 +1061,39 @@ ELSE()
     message(STATUS "ML: disabled")
 ENDIF()
 
+set(LOGSMANAGEMENT_FILES
+        collectors/logsmanagement.plugin/plugin_logsmanagement_docker_ev.c
+        collectors/logsmanagement.plugin/plugin_logsmanagement_docker_ev.h
+        collectors/logsmanagement.plugin/plugin_logsmanagement_generic.c
+        collectors/logsmanagement.plugin/plugin_logsmanagement_generic.h
+        collectors/logsmanagement.plugin/plugin_logsmanagement_systemd.c
+        collectors/logsmanagement.plugin/plugin_logsmanagement_systemd.h
+        collectors/logsmanagement.plugin/plugin_logsmanagement_web_log.c
+        collectors/logsmanagement.plugin/plugin_logsmanagement_web_log.h
+        collectors/logsmanagement.plugin/plugin_logsmanagement.c
+        collectors/logsmanagement.plugin/plugin_logsmanagement.h
+        logsmanagement/circular_buffer.c
+        logsmanagement/circular_buffer.h
+        logsmanagement/compression.c
+        logsmanagement/compression.h
+        logsmanagement/logsmanagement_conf.h
+        logsmanagement/db_api.c
+        logsmanagement/db_api.h
+        logsmanagement/file_info.h
+        logsmanagement/helper.h
+        logsmanagement/logsmanagement.c
+        logsmanagement/query.c
+        logsmanagement/query.h
+        logsmanagement/query_test.c
+        logsmanagement/query_test.h
+        logsmanagement/flb_plugin.c
+        logsmanagement/flb_plugin.h
+        logsmanagement/tail_plugin.c
+        logsmanagement/tail_plugin.h
+        logsmanagement/unit_test/unit_test.c
+        logsmanagement/unit_test/unit_test.h
+        )
+
 set(NETDATA_FILES
         collectors/all.h
         ${DAEMON_FILES}
@@ -1098,6 +1131,13 @@ add_definitions(
         -DWEB_DIR="/usr/share/netdata/web"
         -DVARLIB_DIR="/var/lib/netdata"
 )
+
+# -----------------------------------------------------------------------------
+# logs management
+
+IF(ENABLE_LOGSMANAGEMENT) 
+    list(APPEND NETDATA_FILES ${LOGSMANAGEMENT_FILES})
+ENDIF()
 
 # -----------------------------------------------------------------------------
 # kinesis exporting connector
@@ -1717,7 +1757,6 @@ endif()
 
 endif()
 endif()
-
 
 # generate config.h so that CMake becomes independent of automake
 
