--- a/.gitignore
+++ b/.gitignore
@@ -141,6 +141,8 @@ collectors/ioping.plugin/ioping.plugin
 collectors/go.d.plugin
 web/netdata-switch-dashboard.sh
 
+logsmanagement/stress_test/stress_test
+
 # installer generated files
 /netdata-uninstaller.sh
 /netdata-updater.sh
