Move cgroups.plugin test to google test.

--- a/Makefile.am
+++ b/Makefile.am
@@ -920,6 +920,7 @@ TESTS_FILES = \
 if ENABLE_TESTS
 
 TESTS_FILES += \
+    tests/netdata/collectors/cgroups.plugin/tests.cc \
     tests/netdata/libnetdata/tests.cc \
     tests/netdata/libnetdata/arrayalloc/tests.cc \
     tests/netdata/libnetdata/bitmap/tests.cc \
@@ -1169,7 +1170,6 @@ if ENABLE_UNITTESTS
         exporting/tests/exporting_engine_testdriver \
         web/api/tests/web_api_testdriver \
         web/api/tests/valid_urls_testdriver \
-        collectors/cgroups_plugin/tests/cgroups_testdriver \
         $(NULL)
 
     TESTS = $(check_PROGRAMS)
@@ -1320,19 +1320,5 @@ if ENABLE_EXPORTING_MONGODB
         -Wl,--wrap=mongoc_collection_insert_many \
         $(NULL)
 endif
-
-    collectors_cgroups_plugin_tests_cgroups_testdriver_SOURCES = \
-        collectors/cgroups.plugin/tests/test_cgroups_plugin.c \
-        collectors/cgroups.plugin/tests/test_cgroups_plugin.h \
-        collectors/cgroups.plugin/tests/test_doubles.c \
-        $(CGROUPS_PLUGIN_FILES) \
-        database/rrdlabels.c \
-        database/rrd.h \
-        $(LIBNETDATA_FILES) \
-        $(NULL)
-    collectors_cgroups_plugin_tests_cgroups_testdriver_LDADD = $(NETDATA_COMMON_LIBS) $(TEST_LIBS)
-    collectors_cgroups_plugin_tests_cgroups_testdriver_LDFLAGS = \
-        -Wl,--wrap=rrdlabels_add \
-        $(NULL)
 
 endif
