fix ping_packet_loss type

--- a/health/health.d/ping.conf
+++ b/health/health.d/ping.conf
@@ -18,7 +18,7 @@ component: Network
  families: *
        on: ping.host_packet_loss
     class: Errors
-     type: System
+     type: Other
 component: Network
    lookup: average -10m unaligned of loss
     green: 5
