wmi_alerts: Add TCP alert

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -120,6 +120,26 @@ component: Network
        to: sysadmin
 
 
+## TCP
+
+
+ template: wmi_tcp_connections_failure
+       on: wmi.tcp_conns_failures
+    class: Errors
+     type: Windows
+component: TCP
+       os: *
+    hosts: *
+ families: *
+   lookup: sum -10m unaligned absolute match-names of tcp_conns_failures_ipv4,tcp_conns_failures_ipv6
+    units: failures
+    every: 1m
+     warn: $this >= 5
+    delay: down 1h multiplier 1.5 max 2h
+     info: number of connection failures in the last 10 minutes
+       to: sysadmin
+
+
 ## Disk
 
  template: wmi_disk_in_use
