--- a/health/health.d/nvme.conf
+++ b/health/health.d/nvme.conf
@@ -9,7 +9,7 @@ component: Disk
    lookup: max -30s unaligned
     units: state
     every: 10s
-     crit: $this != NAN AND $this != 0
+     crit: $this != nan AND $this != 0
     delay: down 5m multiplier 1.5 max 2h
      info: NVMe device $label:device has critical warnings
        to: sysadmin
