--- a/configure.ac
+++ b/configure.ac
@@ -1765,6 +1765,7 @@ AC_CONFIG_FILES([
     libnetdata/json/Makefile
     libnetdata/health/Makefile
     libnetdata/worker_utilization/Makefile
+	libnetdata/event_loop/Makefile
     registry/Makefile
     streaming/Makefile
     system/Makefile
