--- a/Makefile.am
+++ b/Makefile.am
@@ -189,6 +189,8 @@ LIBNETDATA_FILES = \
     libnetdata/string/utf8.h \
     libnetdata/worker_utilization/worker_utilization.c \
     libnetdata/worker_utilization/worker_utilization.h \
+	libnetdata/event_loop/event_loop.c \
+    libnetdata/event_loop/event_loop.h \
     $(NULL)
 
 if ENABLE_PLUGIN_EBPF
